--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
