--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4",
     "vuex": "^4.0.2"
   },
